weather app v-basic

--- a/exercicios/WeatherApp/temp-project/src/app/app.component.html
+++ b/exercicios/WeatherApp/temp-project/src/app/app.component.html
@@ -1,2 +1,2 @@
-<div> My Weather App</div>
-<app-weather></app-weather>
+ <div class="container mt-4 col-md-2"> Weather App</div>
+<card-weather></card-weather>
