--- a/Angular/countryApiApp/src/app/countries/components/searchBox/searchBox.component.html
+++ b/Angular/countryApiApp/src/app/countries/components/searchBox/searchBox.component.html
@@ -1,8 +1,10 @@
 
+<!--   (keyup.enter)="emitValue(txtInput.value)" -->
 <input
 type="text"
  class="form-control"
   [placeholder]="placeholder"
-  (keyup.enter)="emitValue(txtInput.value)"
+  [value]="initialValue"
+  (keyup)="onKeyPress(txtInput.value)"
   #txtInput
   >
