--- a/Angular/countryApiApp/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/Angular/countryApiApp/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -4,12 +4,15 @@
 <div class="row">
   <div class="col">
  busquedas
+ <!--  (onValue)="searchByCapital($event)" -->
  <shared-search-box
-  (onValue)="searchByCapital($event)"
-  placeholder="Buscar por capital" ></shared-search-box>
+(onDebounce)="searchByCapital($event)"
+[initialValue]="initialValue"
+ placeholder="Buscar por capital" ></shared-search-box>
   </div>
 </div>
 <hr>
+<shared-loading-spiner *ngIf="isLoading"></shared-loading-spiner>
 <div class="row">
   <div class="col">
 <counries-table [countries]="countries"></counries-table>
