--- a/weather-app/src/app/weather/component/search/search.component.html
+++ b/weather-app/src/app/weather/component/search/search.component.html
@@ -1,25 +1,10 @@
 <div class="container mt-4">
   <div class="row justify-content-center">
-   <div class="col-md-10">
-    <div class="input-group mb-3">
 
-      <input
-      type="text"
-      [(ngModel)]="cityName"
-      placeholder="Enter city"
-      class="form-control">
-      <button
-      class="btn btn-primary"
-      (click)="onSearch()">Search</button>
-
-
-
-
-
-</div>
-
-</div>
-
+      <mat-form-field appearance="outline" class="full-width">
+        <mat-label>Enter city</mat-label>
+        <input matInput [(ngModel)]="cityName" placeholder="City name">
+      </mat-form-field>
+      <button mat-raised-button color="primary" class="full-width search-button" (click)="onSearch()">Search</button>
   </div>
-
 </div>
