--- a/weather-app/src/app/weather/component/search/search.component.html
+++ b/weather-app/src/app/weather/component/search/search.component.html
@@ -1,6 +1,5 @@
 <div class="container mt-4">
-  <div class="row justify-content-center">
-
+  <div class="row justify-content-center mt-4">
       <mat-form-field appearance="outline" class="full-width">
         <mat-label>Enter city</mat-label>
         <input matInput [(ngModel)]="cityName" placeholder="City name">
