--- a/weather-app/src/app/weather/component/weather-chart/weather-chart.component.html
+++ b/weather-app/src/app/weather/component/weather-chart/weather-chart.component.html
@@ -1,9 +1,4 @@
-<div style="display: block;">
-  <canvas baseChart
-          [data]="chartData"
-          [labels]="chartLabels"
-          [options]="chartOptions"
-          [legend]="chartLegend"
-          [chartType]="chartType">
-  </canvas>
+<div>
+  <canvas id="myChart"></canvas>
 </div>
+
