--- a/Angular/04-countryApiApp/src/app/countries/components/country-detail-modal/country-detail-modal.component.css
+++ b/Angular/04-countryApiApp/src/app/countries/components/country-detail-modal/country-detail-modal.component.css
@@ -1,31 +1,40 @@
 .modal-backdrop {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    z-index: 999;
-  }
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
+  z-index: 999;
+}
 
-  .modal {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: white;
-    padding: 20px;
-    border-radius: 8px;
-    z-index: 1000;
-  }
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1000;
+  display: block;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
 
-  .modal-content {
-    max-width: 500px;
-    margin: auto;
-  }
 
-  .close {
-    float: right;
-    font-size: 28px;
-    cursor: pointer;
-  }
+
+.modal-content {
+  padding: 20px;
+  max-width: 80vh;
+height: 100vh;
+/* overflow: hidden; */
+  margin: auto;
+  text-align: center;
+
+}
+
+.close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 28px;
+  cursor: pointer;
+  color: #000;
+}
