--- a/Angular/04-countryApiApp/src/app/countries/pages/by-flag-page/by-flag-page.component.html
+++ b/Angular/04-countryApiApp/src/app/countries/pages/by-flag-page/by-flag-page.component.html
@@ -27,7 +27,8 @@
   </div>
 </div>
 
-<app-country-detail-modal 
+<app-country-detail-modal
   [country]="selectedCountry!"
-  [showModal]="showModal">
+  [showModal]="showModal"
+  (close)="closeModal()">
 </app-country-detail-modal>
