i hate this api

--- a/Angular/04-countryApiApp/src/app/shared/components/sidebar/sidebar.component.html
+++ b/Angular/04-countryApiApp/src/app/shared/components/sidebar/sidebar.component.html
@@ -25,5 +25,11 @@
  class="list-group-item">
   Banderas
  </li>
+ <li
+ routerLink="countries/population"
+ routerLinkActive="active"
+ class="list-group-item">
+  Poblacion de España
+ </li>
 
 </ul>
