--- a/Angular/04-countryApiApp/src/app/shared/components/sidebar/sidebar.component.html
+++ b/Angular/04-countryApiApp/src/app/shared/components/sidebar/sidebar.component.html
@@ -31,5 +31,11 @@
  class="list-group-item">
   Poblacion de España
  </li>
+ <li
+ routerLink="countries/populationcopy"
+ routerLinkActive="active"
+ class="list-group-item">
+  Poblacion de España2
+ </li>
 
 </ul>
