--- a/Angular/04-countryApiApp/src/app/countries/pages/population-page copy/population.component.css
+++ b/Angular/04-countryApiApp/src/app/countries/pages/population-page copy/population.component.css
@@ -1,3 +1,6 @@
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+/*
 .population-cards {
   display: flex;
   flex-wrap: wrap;
@@ -38,4 +41,4 @@ mat-card-content {
 .mat-card-subtitle {
   text-align: center;
 }
-
+ */
