--- a/Angular/04-countryApiApp/src/app/countries/pages/population-page copy/population.component.html
+++ b/Angular/04-countryApiApp/src/app/countries/pages/population-page copy/population.component.html
@@ -1,18 +1,35 @@
-<mat-card *ngFor="let community of combinedData">
+<shared-search-box
+  [placeholder]="'Search population by name...'"
+  (onValue)="handleSearch($event)"
+  (onDebounce)="handleDebounce($event)"
+></shared-search-box>
+
+
+<shared-loading-spiner *ngIf="isLoading"></shared-loading-spiner>
+<mat-card class="population-card" *ngFor="let community of filteredData">
   <mat-card-header>
     <mat-card-title>{{ community.name }}</mat-card-title>
-    <mat-card-subtitle>Population: {{ community.population }}</mat-card-subtitle>
+
+    <mat-card-subtitle>
+      <mat-icon>group</mat-icon> Population: {{ community.population }}
+    </mat-card-subtitle>
+
+    <mat-card-subtitle>
+      <mat-icon>calendar_today</mat-icon> Year: 2022
+    </mat-card-subtitle>
+
+    <button mat-icon-button (click)="toggleProvinces(community.name)">
+      <mat-icon>{{ toggledCommunities[community.name] ? 'expand_less' : 'expand_more' }}</mat-icon>
+    </button>
   </mat-card-header>
   <mat-card-content>
-    <!-- Відображення кількості провінцій -->
     <p>Number of Provinces: {{ community.provinces.length }}</p>
-    <!-- Якщо потрібно відображати список провінцій, додайте це: -->
-    <!--
-    <ul>
+
+    <ul *ngIf="toggledCommunities[community.name]">
       <li *ngFor="let province of community.provinces">
-        {{ province.name }} - Population: {{ province.population }}
+        {{ province.name }}
       </li>
     </ul>
-    -->
   </mat-card-content>
 </mat-card>
+
