--- a/Angular/04-countryApiApp/src/app/countries/pages/population-page copy/population.component.css
+++ b/Angular/04-countryApiApp/src/app/countries/pages/population-page copy/population.component.css
@@ -1,4 +1,3 @@
-@import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
 /*
 .population-cards {
@@ -13,10 +12,6 @@
   margin: 16px;
 }
 
-mat-card {
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-}
 
 mat-card-title {
   font-size: 1.2em;
@@ -42,3 +37,9 @@ mat-card-content {
   text-align: center;
 }
  */
+.population-card{
+  margin: 20px ;
+  width: 300px;
+
+
+}
