--- a/Angular/04-countryApiApp/src/app/app.component.html
+++ b/Angular/04-countryApiApp/src/app/app.component.html
@@ -6,9 +6,10 @@
   </div>
   <div class="col">
    <!-- Nuestras psginas -->
- <!-- <shared-about-page></shared-about-page> -->
- <!--    <shared-home-page></shared-home-page> -->
+ <!-- <shared-about-page></shared-about-page>
+    <shared-home-page></shared-home-page> -->
 
  <router-outlet></router-outlet>
+
  </div>
  </div>
