--- a/Angular/refactorizacion/src/app/shared/components/navbar/navbar.component.html
+++ b/Angular/refactorizacion/src/app/shared/components/navbar/navbar.component.html
@@ -5,6 +5,8 @@
   <span class="spacer"></span>
       <button mat-button routerLink="/countries">Contries</button>
       <button mat-button routerLink="/weather">Weather</button>
+       <button mat-button [routerLink]="['/weather']">Weather</button>
+      
       <button mat-button routerLink="/flags">Flags</button>
       <button mat-button routerLink="/login">Login</button>
 </mat-toolbar>
