worst than previous

--- a/Angular/refactorizacion/src/app/tiempo/pages/weather-page/weather-page.component.html
+++ b/Angular/refactorizacion/src/app/tiempo/pages/weather-page/weather-page.component.html
@@ -1,4 +1,4 @@
-<p>weather-page works!</p>
+<!-- <p>weather-page works!</p> -->
 <mat-toolbar color="primary">
   <span class="spacer"></span>
   <button mat-button (click)="toggleTheme()">
