--- a/Angular/refactorizacion/src/app/countries/pages/main-page-countries/main-page-countries.component.html
+++ b/Angular/refactorizacion/src/app/countries/pages/main-page-countries/main-page-countries.component.html
@@ -1,3 +1,30 @@
 <p>main-page-countries works!</p>
-<shared-sidebar></shared-sidebar>
+<h2>Paises!</h2>
+<hr>
+<ul class="list-group">
+ <li
+ routerLink="by-capital"
+ routerLinkActive="active"
+ class="list-group-item">
+  Por capital
+ </li>
+ <li
+ routerLink="by-country"
+ routerLinkActive="active"
+ class="list-group-item">
+  Por pais
+ </li>
+ <li
+ routerLink="by-region"
+ routerLinkActive="active"
+ class="list-group-item">
+  Por region
+ </li>
+ <li
+ routerLink="populationcopy"
+ routerLinkActive="active"
+ class="list-group-item">
+  Poblacion de España
+ </li>
 
+</ul>
