--- a/Angular/refactorizacion/src/app/countries/pages/main-page-countries/main-page-countries.component.html
+++ b/Angular/refactorizacion/src/app/countries/pages/main-page-countries/main-page-countries.component.html
@@ -1,30 +1,19 @@
-<p>main-page-countries works!</p>
 <h2>Paises!</h2>
-<hr>
+<hr />
 <ul class="list-group">
- <li
- routerLink="by-capital"
- routerLinkActive="active"
- class="list-group-item">
-  Por capital
- </li>
- <li
- routerLink="by-country"
- routerLinkActive="active"
- class="list-group-item">
-  Por pais
- </li>
- <li
- routerLink="by-region"
- routerLinkActive="active"
- class="list-group-item">
-  Por region
- </li>
- <li
- routerLink="populationcopy"
- routerLinkActive="active"
- class="list-group-item">
-  Poblacion de España
- </li>
-
+  <li class="list-group-item">
+    <a routerLink="by-capital" routerLinkActive="active">Por capital</a>
+  </li>
+  <li class="list-group-item">
+    <a routerLink="by-country" routerLinkActive="active">Por país</a>
+  </li>
+  <li class="list-group-item">
+    <a routerLink="by-region" routerLinkActive="active">Por región</a>
+  </li>
+  <li class="list-group-item">
+    <a routerLink="populationcopy" routerLinkActive="active">
+      Población de España
+    </a>
+  </li>
 </ul>
+<router-outlet></router-outlet>
