--- a/Angular/refactorizacion/src/app/shared/components/navbar/navbar.component.html
+++ b/Angular/refactorizacion/src/app/shared/components/navbar/navbar.component.html
@@ -8,3 +8,16 @@
       <button mat-button routerLink="/flags">Flags</button>
       <button mat-button routerLink="/auth/login">Login</button>
 </mat-toolbar>
+
+
+
+
+
+
+<span class="spacer"></span>
+
+<span>{{ user?.email }}</span>
+
+<button mat-button (click)="onLogout()">
+  Logout
+</button>
