--- a/Angular/refactorizacion/src/app/auth/pages/login-page/login-page.component.html
+++ b/Angular/refactorizacion/src/app/auth/pages/login-page/login-page.component.html
@@ -1,7 +1,7 @@
 
 <div class="flex flex-column">
 
-  <span class="text-lg mb-4">Login</span>
+<!--   <span class="text-lg mb-4">Login</span> -->
 
   <mat-form-field>
     <mat-label>Usuario</mat-label>
