--- a/Angular/refactorizacion/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/Angular/refactorizacion/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -1,9 +1,8 @@
-<h2>Por capital</h2>
+<!-- <h2>Por capital</h2> -->
 <hr>
 
 <div class="row">
   <div class="col">
- busquedas
  <shared-search-box
 (onDebounce)="searchByCapital($event)"
 [initialValue]="initialValue"
