--- a/Angular/refactorizacion/src/app/countries/pages/by-country-page/by-country-page.component.html
+++ b/Angular/refactorizacion/src/app/countries/pages/by-country-page/by-country-page.component.html
@@ -1,9 +1,9 @@
-<h2>Por pais</h2>
+<!-- <h2>Por pais</h2> -->
 <hr>
 
 <div class="row">
   <div class="col">
- busquedas
+ <!-- busquedas -->
  <shared-search-box
  [initialValue]="initialValue"
   (onDebounce)="searchByCountry($event)"
