--- a/Angular/refactorizacion/src/styles.css
+++ b/Angular/refactorizacion/src/styles.css
@@ -8,8 +8,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 
 body.dark-theme {
-  background-color: #121212;
-
+  background-color: #5e5858;
 }
 
 body.dark-theme .mat-card {
