--- a/Angular/refactorizacion/src/app/auth/pages/login-page/login-page.component.html
+++ b/Angular/refactorizacion/src/app/auth/pages/login-page/login-page.component.html
@@ -1,28 +1,20 @@
-
 <div class="flex flex-column">
-
-<!--   <span class="text-lg mb-4">Login</span> -->
-
   <mat-form-field>
-    <mat-label>Usuario</mat-label>
-    <input type="text" matInput placeholder="Nombre de usuario">
+    <mat-label>Email</mat-label>
+    <input type="email" matInput [(ngModel)]="email" placeholder="Email">
   </mat-form-field>
 
   <mat-form-field>
-    <mat-label>Contraseña</mat-label>
-    <input type="password" matInput placeholder="Contraseña">
+    <mat-label>Пароль</mat-label>
+    <input type="password" matInput [(ngModel)]="password" placeholder="Пароль">
   </mat-form-field>
 
-  <button mat-button mat-flat-button color="primary"
-    (click)="onLogin()">
+  <button mat-button mat-flat-button color="primary" (click)="onLogin()">
     <mat-icon>save</mat-icon>
-    Ingresar
+    Увійти
   </button>
 
-
   <div class="flex justify-content-end mt-5">
-    <a routerLink="/auth/new-account">¿Ya tienes cuenta?</a>
+    <a routerLink="/auth/new-account">¿Немає аккаунту?</a>
   </div>
-
 </div>
-
