--- a/Angular/refactorizacion/src/app/countries/pages/main-page-countries/main-page-countries.component.html
+++ b/Angular/refactorizacion/src/app/countries/pages/main-page-countries/main-page-countries.component.html
@@ -1,19 +1,44 @@
-<h2>Paises!</h2>
-<hr />
-<ul class="list-group">
-  <li class="list-group-item">
-    <a routerLink="by-capital" routerLinkActive="active">Por capital</a>
-  </li>
-  <li class="list-group-item">
-    <a routerLink="by-country" routerLinkActive="active">Por país</a>
-  </li>
-  <li class="list-group-item">
-    <a routerLink="by-region" routerLinkActive="active">Por región</a>
-  </li>
-  <li class="list-group-item">
-    <a routerLink="populationcopy" routerLinkActive="active">
-      Población de España
-    </a>
-  </li>
-</ul>
-<router-outlet></router-outlet>
+<div class="container my-4">
+  <h2>¿Cómo vamos a buscar?</h2>
+  <hr />
+  <ul class="nav nav-pills justify-content-center mb-4">
+    <li class="nav-item">
+      <a
+        class="nav-link"
+        routerLink="by-capital"
+        routerLinkActive="active"
+        [routerLinkActiveOptions]="{ exact: true }"
+        >Por capital</a
+      >
+    </li>
+    <li class="nav-item">
+      <a
+        class="nav-link"
+        routerLink="by-country"
+        routerLinkActive="active"
+        [routerLinkActiveOptions]="{ exact: true }"
+        >Por país</a
+      >
+    </li>
+    <li class="nav-item">
+      <a
+        class="nav-link"
+        routerLink="by-region"
+        routerLinkActive="active"
+        [routerLinkActiveOptions]="{ exact: true }"
+        >Por región</a
+      >
+    </li>
+    <li class="nav-item">
+      <a
+        class="nav-link"
+        routerLink="populationcopy"
+        routerLinkActive="active"
+        [routerLinkActiveOptions]="{ exact: true }"
+        >Población de España</a
+      >
+    </li>
+  </ul>
+  <router-outlet></router-outlet>
+</div>
+
