--- a/Angular/refactorizacion/src/app/shared/components/navbar/navbar.component.html
+++ b/Angular/refactorizacion/src/app/shared/components/navbar/navbar.component.html
@@ -1,23 +1,16 @@
-
 <mat-toolbar color="primary">
-  <!-- <mat-icon>menu</mat-icon> -->
   <span>My App</span>
   <span class="spacer"></span>
-      <button mat-button routerLink="/countries">Contries</button>
-      <button mat-button routerLink="/weather">Weather</button>
-      <button mat-button routerLink="/flags">Flags</button>
-      <button mat-button routerLink="/auth/login">Login</button>
+
+  <button mat-button routerLink="/countries">Countries</button>
+  <button mat-button routerLink="/weather">Weather</button>
+  <button mat-button routerLink="/flags">Flags</button>
+
+  <span class="spacer"></span>
+
+  <span *ngIf="user">{{ user.email }}</span>
+
+  <button mat-button (click)="onAuthAction()">
+    {{ user ? 'Logout' : 'Login' }}
+  </button>
 </mat-toolbar>
-
-
-
-
-
-
-<span class="spacer"></span>
-
-<span>{{ user?.email }}</span>
-
-<button mat-button (click)="onLogout()">
-  Logout
-</button>
