--- a/Angular/refactorizacion/src/app/tiempo/component/search/search.component.html
+++ b/Angular/refactorizacion/src/app/tiempo/component/search/search.component.html
@@ -1,9 +1,14 @@
 <div class="container mt-4">
   <div class="row justify-content-center mt-4">
-      <mat-form-field appearance="outline" class="full-width">
-        <mat-label>Enter city</mat-label>
-        <input matInput [(ngModel)]="cityName" placeholder="City name">
-      </mat-form-field>
-      <button mat-raised-button color="primary" class="full-width search-button" (click)="onSearch()">Search</button>
+    <mat-form-field appearance="outline" class="full-width">
+      <mat-label>Enter city</mat-label>
+      <input
+        matInput
+        [(ngModel)]="cityName"
+        placeholder="City name"
+        (keyup)="onSearch()"
+        autocomplete="off"
+      >
+    </mat-form-field>
   </div>
 </div>
