--- a/Angular/refactorizacion/src/app/auth/pages/login-page/login-page.component.html
+++ b/Angular/refactorizacion/src/app/auth/pages/login-page/login-page.component.html
@@ -1,20 +1,26 @@
-<div class="flex flex-column">
-  <mat-form-field>
-    <mat-label>Email</mat-label>
-    <input type="email" matInput [(ngModel)]="email" placeholder="Email">
-  </mat-form-field>
+<div class="container align-items-center" style="min-height: 100vh;">
+  <div class="">
+    <div class="col-12 col-md-6 col-lg-4">
+      <div class="d-flex flex-column">
+        <mat-form-field class="w-100">
+          <mat-label>Correo electrónico</mat-label>
+          <input type="email" matInput [(ngModel)]="email" placeholder="Correo electrónico">
+        </mat-form-field>
 
-  <mat-form-field>
-    <mat-label>Пароль</mat-label>
-    <input type="password" matInput [(ngModel)]="password" placeholder="Пароль">
-  </mat-form-field>
+        <mat-form-field class="w-100">
+          <mat-label>Contraseña</mat-label>
+          <input type="password" matInput [(ngModel)]="password" placeholder="Contraseña">
+        </mat-form-field>
 
-  <button mat-button mat-flat-button color="primary" (click)="onLogin()">
-    <mat-icon>save</mat-icon>
-    Увійти
-  </button>
+        <button mat-button mat-flat-button color="primary" class="w-100 mt-3" (click)="onLogin()">
+          <mat-icon>save</mat-icon>
+          Iniciar sesión
+        </button>
 
-  <div class="flex justify-content-end mt-5">
-    <a routerLink="/auth/new-account">¿Немає аккаунту?</a>
+        <div class="d-flex justify-content-end mt-4">
+          <a routerLink="/auth/new-account">¿No tienes una cuenta?</a>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
