--- a/Angular/refactorizacion/src/app/auth/pages/register-page/register-page.component.html
+++ b/Angular/refactorizacion/src/app/auth/pages/register-page/register-page.component.html
@@ -1,32 +1,33 @@
-
-<div class="flex flex-column">
-
-  <span class="text-lg mb-4">Registro</span>
-
-  <mat-form-field>
-    <mat-label>Usuario</mat-label>
-    <input type="text" matInput placeholder="Nombre de usuario">
-  </mat-form-field>
-
-  <mat-form-field>
-    <mat-label>Nombre</mat-label>
-    <input type="text" matInput placeholder="Nombre de usuario">
-  </mat-form-field>
-
-  <mat-form-field>
-    <mat-label>Contraseña</mat-label>
-    <input type="password" matInput placeholder="Contraseña">
-  </mat-form-field>
-
-  <button mat-button mat-flat-button color="primary">
-    <mat-icon>save</mat-icon>
-    Crear cuenta
-  </button>
+<div class="container  align-items-center" style="min-height: 100vh;">
+  <div class=" ">
+    <div class="col-12 col-md-6 col-lg-4">
+      <div class="">
 
 
-  <div class="flex justify-content-end mt-5">
-    <a routerLink="/auth/login">¿No tienes cuenta?</a>
+        <mat-form-field class="w-100">
+          <mat-label>Usuario</mat-label>
+          <input type="text" matInput placeholder="Nombre de usuario">
+        </mat-form-field>
+
+        <mat-form-field class="w-100">
+          <mat-label>Nombre</mat-label>
+          <input type="text" matInput placeholder="Nombre">
+        </mat-form-field>
+
+        <mat-form-field class="w-100">
+          <mat-label>Contraseña</mat-label>
+          <input type="password" matInput placeholder="Contraseña">
+        </mat-form-field>
+
+        <button mat-button mat-flat-button color="primary" class="w-100 mt-3">
+          <mat-icon>save</mat-icon>
+          Crear cuenta
+        </button>
+
+        <div class="d-flex justify-content-end mt-4">
+          <a routerLink="/auth/login">¿No tienes cuenta?</a>
+        </div>
+      </div>
+    </div>
   </div>
-
 </div>
-
